# todo-AI-chatbot

./: .env.example  .gitignore  README.md  index.js  main.py  package.json  pyproject.toml  requirements.txt
agents/: __init__.py
api/: __init__.py
config/: __init__.py  constants.py  settings.py
database/: __init__.py
models/: __init__.py  user.py
plan/: implementation_plan.md
schemas/: __init__.py
specs/: system_spec.md
tasks/: atomic_tasks.md
tools/: __init__.py
