[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-ai-chatbot"
version = "0.1.0"
description = "An AI-powered todo chatbot application"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.16",
    "openai>=1.3.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "better-exceptions>=0.3.3",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "sse-starlette>=1.8.2",
    "websockets>=12.0",
    "requests>=2.31.0",
    "httpx>=0.25.2",
    "aiosqlite>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "httpx>=0.25.2",
    "faker>=19.6.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*", "api*", "models*", "tools*", "agents*", "database*", "schemas*", "config*", "frontend*"]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true